kubernetes/apps/clean-pods/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: clean-pods-egress
  namespace: clean-pods
spec:
  description: "Allow the cleanup CronJob to reach the kube-apiserver and pull apk packages"
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
